--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNF1eDHQy73fSKx6oA/7uVg",
+      "authorship_tag": "ABX9TyN58NKw/KBx5CCZek1U9kOK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +35,12 @@
       "metadata": {
         "id": "tPcvYKQVuwFP"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "kDZXVzmhnHqk"
       },
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "OlFLgUnWubZt"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,12 +88,13 @@
         "\n",
         "  def predict(self, X):\n",
         "    z = np.dot(X, self.wt) + self.bias\n",
-        "    return sigmoid(z) \n"
+        "    y_pred = sigmoid(z) \n",
+        "    return [1 if y >= 0.5 else 0 for y in y_pred]\n"
       ],
       "metadata": {
         "id": "FBpgAsI8p11W"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -112,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lchAPtSSvFAc",
-        "outputId": "13e5662d-a3a1-4f8a-bc96-f98fc2b7a011"
+        "outputId": "f8a49c9d-ddd1-4851-e139-bee4d2e3e6cf"
       },
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,15 +140,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yz8tKAtIvHmV",
-        "outputId": "d99b9908-5248-4a4a-f02d-950d0187206e"
+        "outputId": "98364a31-0177-45da-8e14-5089f5a3a7a5"
       },
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.8421052631578947\n"
+            "0.8771929824561403\n"
           ]
         }
       ]
